Behaviour of Runtime.exec has changed in Java 7 update 21 Use ProcessBuilder class instead
fixes Sage-ERP-X3/Syracuse#2178